--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.0.5",
-    "com.unity.feature.development": "1.0.1",
+    "com.unity.addressables": "1.21.14",
+    "com.unity.entities": "1.0.11",
+    "com.unity.entities.graphics": "1.0.11",
+    "com.unity.ide.visualstudio": "2.0.20",
+    "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
