--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.entities": "1.0.11",
     "com.unity.entities.graphics": "1.0.11",
     "com.unity.ide.visualstudio": "2.0.20",
+    "com.unity.physics": "1.0.11",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
